--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "url": "viniciusslisboa/eslint-config-vn"
+  },
   "peerDependencies": {
     "eslint": "^9.0.0",
     "typescript": ">=5"
